@@ -17,10 +17,12 @@ NEW FEATURES
     o	package.skeleton() now handles S4 classes and methods,
         producing documentation and NAMESPACE exports if requested.
 
+
 PACKAGE INSTALLATION
 
     o	LazyLoad: yes is now the default, so packages wanting to avoid
-	lazy loading must set LazyLoad: no (or an equivalent value).
+	lazy loading must set LazyLoad: no (or an equivalent value) in
+	the DESCRIPTION file.
 
 
 DEPRECATED & DEFUNCT
@@ -46,6 +48,12 @@ DEPRECATED & DEFUNCT
 
     o	In package installation, SaveImage: yes is now ignored, and
 	any use of the field will give a warning.
+
+
+BUG FIXES
+
+    o	@ now checks it is being applied to an S4 object.
+
 
 
 
@@ -748,6 +756,8 @@ BUG FIXES
     	e.g. qgamma(1.2e-10, shape = 19) was 2.52 rather than 2.73.
 
     o	dbeta(.., ncp) is now more accurate for large ncp.
+
+    o	coerce() is now a proper S4 object and so prints correctly.
 
 
 
